--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
 <!--                    <form action="" class="contact__form">-->
                         <input type="text" placeholder="Name" class="contact__input" name="name" required>
                         <input type="email" placeholder="Email" class="contact__input" name="email" required>
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="submit" value="Submit" class="contact__button button">
+<!--                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                        <input type="submit" value="Submit" class="contact__button button"> -->
                     </form>
                 </div>
             </section>
